// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Droplist matches the snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Droplist
    classes={
      Object {
        "block": "block",
        "group": "group",
        "item": "item",
        "onFocus": "onFocus",
        "right": "right",
      }
    }
    filter={true}
    groupIdKey="id"
    groupItemsKey="items"
    groupNameKey="text"
    groups={false}
    itemIdKey="id"
    itemTextKey="text"
    itemTextRightKey="textRight"
    items={
      Array [
        Object {
          "id": 1,
          "text": "Administrador",
          "textRight": "(222)",
        },
        Object {
          "id": 2,
          "text": "Administrador Sr",
          "textRight": "(134)",
        },
        Object {
          "id": 3,
          "text": "Administrador Jr",
          "textRight": "(52)",
        },
        Object {
          "id": 4,
          "text": "Administrar",
          "textRight": "(6)",
        },
      ]
    }
    term=""
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="item"
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
        >
          <Jss(Text)
            tag="p"
          >
            
            <Jss(Text)
              strong={true}
              tag="b"
            >
              
            </Jss(Text)>
            Administrador
          </Jss(Text)>
          <span
            className="right"
          >
            <Jss(Text)
              low={true}
              tag="span"
            >
              (222)
            </Jss(Text)>
          </span>
        </div>,
        <div
          className="item"
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
        >
          <Jss(Text)
            tag="p"
          >
            
            <Jss(Text)
              strong={true}
              tag="b"
            >
              
            </Jss(Text)>
            Administrador Sr
          </Jss(Text)>
          <span
            className="right"
          >
            <Jss(Text)
              low={true}
              tag="span"
            >
              (134)
            </Jss(Text)>
          </span>
        </div>,
        <div
          className="item"
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
        >
          <Jss(Text)
            tag="p"
          >
            
            <Jss(Text)
              strong={true}
              tag="b"
            >
              
            </Jss(Text)>
            Administrador Jr
          </Jss(Text)>
          <span
            className="right"
          >
            <Jss(Text)
              low={true}
              tag="span"
            >
              (52)
            </Jss(Text)>
          </span>
        </div>,
        <div
          className="item"
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
        >
          <Jss(Text)
            tag="p"
          >
            
            <Jss(Text)
              strong={true}
              tag="b"
            >
              
            </Jss(Text)>
            Administrar
          </Jss(Text)>
          <span
            className="right"
          >
            <Jss(Text)
              low={true}
              tag="span"
            >
              (6)
            </Jss(Text)>
          </span>
        </div>,
      ],
      "className": "block",
      "id": undefined,
      "style": undefined,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "1",
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <Jss(Text)
              tag="p"
            >
              
              <Jss(Text)
                strong={true}
                tag="b"
              >
                
              </Jss(Text)>
              Administrador
            </Jss(Text)>,
            <span
              className="right"
            >
              <Jss(Text)
                low={true}
                tag="span"
              >
                (222)
              </Jss(Text)>
            </span>,
          ],
          "className": "item",
          "onClick": [Function],
          "onMouseDown": [Function],
          "onMouseUp": [Function],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                "",
                <Jss(Text)
                  strong={true}
                  tag="b"
                >
                  
                </Jss(Text)>,
                "Administrador",
              ],
              "tag": "p",
            },
            "ref": null,
            "rendered": Array [
              "",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "",
                  "strong": true,
                  "tag": "b",
                },
                "ref": null,
                "rendered": "",
                "type": [Function],
              },
              "Administrador",
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Jss(Text)
                low={true}
                tag="span"
              >
                (222)
              </Jss(Text)>,
              "className": "right",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "(222)",
                "low": true,
                "tag": "span",
              },
              "ref": null,
              "rendered": "(222)",
              "type": [Function],
            },
            "type": "span",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": "2",
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <Jss(Text)
              tag="p"
            >
              
              <Jss(Text)
                strong={true}
                tag="b"
              >
                
              </Jss(Text)>
              Administrador Sr
            </Jss(Text)>,
            <span
              className="right"
            >
              <Jss(Text)
                low={true}
                tag="span"
              >
                (134)
              </Jss(Text)>
            </span>,
          ],
          "className": "item",
          "onClick": [Function],
          "onMouseDown": [Function],
          "onMouseUp": [Function],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                "",
                <Jss(Text)
                  strong={true}
                  tag="b"
                >
                  
                </Jss(Text)>,
                "Administrador Sr",
              ],
              "tag": "p",
            },
            "ref": null,
            "rendered": Array [
              "",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "",
                  "strong": true,
                  "tag": "b",
                },
                "ref": null,
                "rendered": "",
                "type": [Function],
              },
              "Administrador Sr",
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Jss(Text)
                low={true}
                tag="span"
              >
                (134)
              </Jss(Text)>,
              "className": "right",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "(134)",
                "low": true,
                "tag": "span",
              },
              "ref": null,
              "rendered": "(134)",
              "type": [Function],
            },
            "type": "span",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": "3",
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <Jss(Text)
              tag="p"
            >
              
              <Jss(Text)
                strong={true}
                tag="b"
              >
                
              </Jss(Text)>
              Administrador Jr
            </Jss(Text)>,
            <span
              className="right"
            >
              <Jss(Text)
                low={true}
                tag="span"
              >
                (52)
              </Jss(Text)>
            </span>,
          ],
          "className": "item",
          "onClick": [Function],
          "onMouseDown": [Function],
          "onMouseUp": [Function],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                "",
                <Jss(Text)
                  strong={true}
                  tag="b"
                >
                  
                </Jss(Text)>,
                "Administrador Jr",
              ],
              "tag": "p",
            },
            "ref": null,
            "rendered": Array [
              "",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "",
                  "strong": true,
                  "tag": "b",
                },
                "ref": null,
                "rendered": "",
                "type": [Function],
              },
              "Administrador Jr",
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Jss(Text)
                low={true}
                tag="span"
              >
                (52)
              </Jss(Text)>,
              "className": "right",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "(52)",
                "low": true,
                "tag": "span",
              },
              "ref": null,
              "rendered": "(52)",
              "type": [Function],
            },
            "type": "span",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": "4",
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <Jss(Text)
              tag="p"
            >
              
              <Jss(Text)
                strong={true}
                tag="b"
              >
                
              </Jss(Text)>
              Administrar
            </Jss(Text)>,
            <span
              className="right"
            >
              <Jss(Text)
                low={true}
                tag="span"
              >
                (6)
              </Jss(Text)>
            </span>,
          ],
          "className": "item",
          "onClick": [Function],
          "onMouseDown": [Function],
          "onMouseUp": [Function],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                "",
                <Jss(Text)
                  strong={true}
                  tag="b"
                >
                  
                </Jss(Text)>,
                "Administrar",
              ],
              "tag": "p",
            },
            "ref": null,
            "rendered": Array [
              "",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "",
                  "strong": true,
                  "tag": "b",
                },
                "ref": null,
                "rendered": "",
                "type": [Function],
              },
              "Administrar",
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Jss(Text)
                low={true}
                tag="span"
              >
                (6)
              </Jss(Text)>,
              "className": "right",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "(6)",
                "low": true,
                "tag": "span",
              },
              "ref": null,
              "rendered": "(6)",
              "type": [Function],
            },
            "type": "span",
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="item"
            onClick={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
          >
            <Jss(Text)
              tag="p"
            >
              
              <Jss(Text)
                strong={true}
                tag="b"
              >
                
              </Jss(Text)>
              Administrador
            </Jss(Text)>
            <span
              className="right"
            >
              <Jss(Text)
                low={true}
                tag="span"
              >
                (222)
              </Jss(Text)>
            </span>
          </div>,
          <div
            className="item"
            onClick={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
          >
            <Jss(Text)
              tag="p"
            >
              
              <Jss(Text)
                strong={true}
                tag="b"
              >
                
              </Jss(Text)>
              Administrador Sr
            </Jss(Text)>
            <span
              className="right"
            >
              <Jss(Text)
                low={true}
                tag="span"
              >
                (134)
              </Jss(Text)>
            </span>
          </div>,
          <div
            className="item"
            onClick={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
          >
            <Jss(Text)
              tag="p"
            >
              
              <Jss(Text)
                strong={true}
                tag="b"
              >
                
              </Jss(Text)>
              Administrador Jr
            </Jss(Text)>
            <span
              className="right"
            >
              <Jss(Text)
                low={true}
                tag="span"
              >
                (52)
              </Jss(Text)>
            </span>
          </div>,
          <div
            className="item"
            onClick={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
          >
            <Jss(Text)
              tag="p"
            >
              
              <Jss(Text)
                strong={true}
                tag="b"
              >
                
              </Jss(Text)>
              Administrar
            </Jss(Text)>
            <span
              className="right"
            >
              <Jss(Text)
                low={true}
                tag="span"
              >
                (6)
              </Jss(Text)>
            </span>
          </div>,
        ],
        "className": "block",
        "id": undefined,
        "style": undefined,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "1",
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <Jss(Text)
                tag="p"
              >
                
                <Jss(Text)
                  strong={true}
                  tag="b"
                >
                  
                </Jss(Text)>
                Administrador
              </Jss(Text)>,
              <span
                className="right"
              >
                <Jss(Text)
                  low={true}
                  tag="span"
                >
                  (222)
                </Jss(Text)>
              </span>,
            ],
            "className": "item",
            "onClick": [Function],
            "onMouseDown": [Function],
            "onMouseUp": [Function],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  "",
                  <Jss(Text)
                    strong={true}
                    tag="b"
                  >
                    
                  </Jss(Text)>,
                  "Administrador",
                ],
                "tag": "p",
              },
              "ref": null,
              "rendered": Array [
                "",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": "",
                    "strong": true,
                    "tag": "b",
                  },
                  "ref": null,
                  "rendered": "",
                  "type": [Function],
                },
                "Administrador",
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Jss(Text)
                  low={true}
                  tag="span"
                >
                  (222)
                </Jss(Text)>,
                "className": "right",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "(222)",
                  "low": true,
                  "tag": "span",
                },
                "ref": null,
                "rendered": "(222)",
                "type": [Function],
              },
              "type": "span",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": "2",
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <Jss(Text)
                tag="p"
              >
                
                <Jss(Text)
                  strong={true}
                  tag="b"
                >
                  
                </Jss(Text)>
                Administrador Sr
              </Jss(Text)>,
              <span
                className="right"
              >
                <Jss(Text)
                  low={true}
                  tag="span"
                >
                  (134)
                </Jss(Text)>
              </span>,
            ],
            "className": "item",
            "onClick": [Function],
            "onMouseDown": [Function],
            "onMouseUp": [Function],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  "",
                  <Jss(Text)
                    strong={true}
                    tag="b"
                  >
                    
                  </Jss(Text)>,
                  "Administrador Sr",
                ],
                "tag": "p",
              },
              "ref": null,
              "rendered": Array [
                "",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": "",
                    "strong": true,
                    "tag": "b",
                  },
                  "ref": null,
                  "rendered": "",
                  "type": [Function],
                },
                "Administrador Sr",
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Jss(Text)
                  low={true}
                  tag="span"
                >
                  (134)
                </Jss(Text)>,
                "className": "right",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "(134)",
                  "low": true,
                  "tag": "span",
                },
                "ref": null,
                "rendered": "(134)",
                "type": [Function],
              },
              "type": "span",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": "3",
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <Jss(Text)
                tag="p"
              >
                
                <Jss(Text)
                  strong={true}
                  tag="b"
                >
                  
                </Jss(Text)>
                Administrador Jr
              </Jss(Text)>,
              <span
                className="right"
              >
                <Jss(Text)
                  low={true}
                  tag="span"
                >
                  (52)
                </Jss(Text)>
              </span>,
            ],
            "className": "item",
            "onClick": [Function],
            "onMouseDown": [Function],
            "onMouseUp": [Function],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  "",
                  <Jss(Text)
                    strong={true}
                    tag="b"
                  >
                    
                  </Jss(Text)>,
                  "Administrador Jr",
                ],
                "tag": "p",
              },
              "ref": null,
              "rendered": Array [
                "",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": "",
                    "strong": true,
                    "tag": "b",
                  },
                  "ref": null,
                  "rendered": "",
                  "type": [Function],
                },
                "Administrador Jr",
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Jss(Text)
                  low={true}
                  tag="span"
                >
                  (52)
                </Jss(Text)>,
                "className": "right",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "(52)",
                  "low": true,
                  "tag": "span",
                },
                "ref": null,
                "rendered": "(52)",
                "type": [Function],
              },
              "type": "span",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": "4",
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <Jss(Text)
                tag="p"
              >
                
                <Jss(Text)
                  strong={true}
                  tag="b"
                >
                  
                </Jss(Text)>
                Administrar
              </Jss(Text)>,
              <span
                className="right"
              >
                <Jss(Text)
                  low={true}
                  tag="span"
                >
                  (6)
                </Jss(Text)>
              </span>,
            ],
            "className": "item",
            "onClick": [Function],
            "onMouseDown": [Function],
            "onMouseUp": [Function],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  "",
                  <Jss(Text)
                    strong={true}
                    tag="b"
                  >
                    
                  </Jss(Text)>,
                  "Administrar",
                ],
                "tag": "p",
              },
              "ref": null,
              "rendered": Array [
                "",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": "",
                    "strong": true,
                    "tag": "b",
                  },
                  "ref": null,
                  "rendered": "",
                  "type": [Function],
                },
                "Administrar",
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Jss(Text)
                  low={true}
                  tag="span"
                >
                  (6)
                </Jss(Text)>,
                "className": "right",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "(6)",
                  "low": true,
                  "tag": "span",
                },
                "ref": null,
                "rendered": "(6)",
                "type": [Function],
              },
              "type": "span",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Droplist styles matches the snapshot 1`] = `
Object {
  "block": Object {
    "background": "#ffffff",
    "border": "1px solid #dddddd",
    "borderRadius": 4,
    "overflow": "hidden",
  },
  "group": Object {
    "padding": Array [
      16,
      16,
      4,
    ],
  },
  "item": Object {
    "&:hover": Object {
      "background": "#fafafa",
    },
    "cursor": "pointer",
    "display": "flex",
    "justifyContent": "space-between",
    "padding": Array [
      8,
      16,
    ],
    "transition": "0.1s all",
  },
  "onFocus": Object {
    "&:hover": Object {
      "background": "#e6ecf7",
    },
    "background": "#e6ecf7",
  },
  "right": Object {
    "float": "right",
    "transition": "0.1s all",
  },
}
`;

exports[`DroplistJSS matches the snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Jss(Droplist)
    filter={true}
    groupIdKey="id"
    groupItemsKey="items"
    groupNameKey="text"
    groups={false}
    itemIdKey="id"
    itemTextKey="text"
    itemTextRightKey="textRight"
    items={
      Array [
        Object {
          "id": 1,
          "text": "Administrador",
          "textRight": "(222)",
        },
        Object {
          "id": 2,
          "text": "Administrador Sr",
          "textRight": "(134)",
        },
        Object {
          "id": 3,
          "text": "Administrador Jr",
          "textRight": "(52)",
        },
        Object {
          "id": 4,
          "text": "Administrar",
          "textRight": "(6)",
        },
      ]
    }
    term=""
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "classes": Object {
        "block": "Droplist-block-0-1-36",
        "group": "Droplist-group-0-1-37",
        "item": "Droplist-item-0-1-38",
        "onFocus": "Droplist-onFocus-0-1-40",
        "right": "Droplist-right-0-1-39",
      },
      "filter": true,
      "groupIdKey": "id",
      "groupItemsKey": "items",
      "groupNameKey": "text",
      "groups": false,
      "itemIdKey": "id",
      "itemTextKey": "text",
      "itemTextRightKey": "textRight",
      "items": Array [
        Object {
          "id": 1,
          "text": "Administrador",
          "textRight": "(222)",
        },
        Object {
          "id": 2,
          "text": "Administrador Sr",
          "textRight": "(134)",
        },
        Object {
          "id": 3,
          "text": "Administrador Jr",
          "textRight": "(52)",
        },
        Object {
          "id": 4,
          "text": "Administrar",
          "textRight": "(6)",
        },
      ],
      "term": "",
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "classes": Object {
          "block": "Droplist-block-0-1-36",
          "group": "Droplist-group-0-1-37",
          "item": "Droplist-item-0-1-38",
          "onFocus": "Droplist-onFocus-0-1-40",
          "right": "Droplist-right-0-1-39",
        },
        "filter": true,
        "groupIdKey": "id",
        "groupItemsKey": "items",
        "groupNameKey": "text",
        "groups": false,
        "itemIdKey": "id",
        "itemTextKey": "text",
        "itemTextRightKey": "textRight",
        "items": Array [
          Object {
            "id": 1,
            "text": "Administrador",
            "textRight": "(222)",
          },
          Object {
            "id": 2,
            "text": "Administrador Sr",
            "textRight": "(134)",
          },
          Object {
            "id": 3,
            "text": "Administrador Jr",
            "textRight": "(52)",
          },
          Object {
            "id": 4,
            "text": "Administrar",
            "textRight": "(6)",
          },
        ],
        "term": "",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
